--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/Chargothrond/shinyfaithful
+BugReports: https://github.com/Chargothrond/shinyfaithful/issues
