--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,21 +2,20 @@ Package: shinyfaithful
 Title: An Amazing Shiny App
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
+    person("firstname", "lastname", , "your@email.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
+URL: https://github.com/Chargothrond/shinyfaithful
+BugReports: https://github.com/Chargothrond/shinyfaithful/issues
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.4.1),
     shiny (>= 1.7.4)
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.2.3
 Suggests: 
+    spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: https://github.com/Chargothrond/shinyfaithful
-BugReports: https://github.com/Chargothrond/shinyfaithful/issues
+Encoding: UTF-8
+Language: en-US
+LazyData: true
+RoxygenNote: 7.2.3
